--- a/pkg/rules/r0001-unexpected-process-launched/unexpected-process-launched.yaml
+++ b/pkg/rules/r0001-unexpected-process-launched/unexpected-process-launched.yaml
@@ -12,11 +12,11 @@ spec:
     id: "R0001"
     description: "Detects unexpected process launches that are not in the baseline"
     expressions:
-      message: "'Unexpected process launched: ' + exec.comm + ' with PID ' + string(exec.pid)"
-      unique_id: "exec.comm + '_' + exec.exe_path"
+      message: "'Unexpected process launched: ' + event.comm + ' with PID ' + string(event.pid)"
+      unique_id: "event.comm + '_' + event.exepath"
       rule_expression:
         - event_type: "exec"
-          expression: "!ap.was_executed(exec.runtime.container_id, parse.get_exec_path(exec.args, exec.comm))"
+          expression: "!ap.was_executed(event.containerId, parse.get_exec_path(event.args, event.comm))"
     profile_dependency: 0
     severity: 1
     support_policy: false
