--- a/pkg/rules/r0003-unexpected-system-call/unexpected-system-call.yaml
+++ b/pkg/rules/r0003-unexpected-system-call/unexpected-system-call.yaml
@@ -12,11 +12,11 @@ spec:
     id: "R0003"
     description: "Detects unexpected system calls that are not whitelisted by application profile"
     expressions:
-      message: "'Unexpected system call detected: ' + syscall.syscall_name + ' with PID ' + string(syscall.pid)"
-      unique_id: "syscall.syscall_name"
+      message: "'Unexpected system call detected: ' + event.syscallName + ' with PID ' + string(event.pid)"
+      unique_id: "event.syscallName"
       rule_expression:
         - event_type: "syscall"
-          expression: "!ap.was_syscall_used(syscall.runtime.container_id, syscall.syscall_name)"
+          expression: "!ap.was_syscall_used(event.containerId, event.syscallName)"
     profile_dependency: 0
     severity: 1
     support_policy: false
