--- a/pkg/rules/r0004-unexpected-capability-used/unexpected-capability-used.yaml
+++ b/pkg/rules/r0004-unexpected-capability-used/unexpected-capability-used.yaml
@@ -12,11 +12,11 @@ spec:
     id: "R0004"
     description: "Detects unexpected capabilities that are not whitelisted by application profile"
     expressions:
-      message: "'Unexpected capability used: ' + capabilities.cap_name + ' in syscall ' + capabilities.syscall + ' with PID ' + string(capabilities.pid)"
-      unique_id: "capabilities.comm + '_' + capabilities.cap_name"
+      message: "'Unexpected capability used: ' + event.capName + ' in syscall ' + event.syscallName + ' with PID ' + string(event.pid)"
+      unique_id: "event.comm + '_' + event.capName"
       rule_expression:
         - event_type: "capabilities"
-          expression: "!ap.was_capability_used(capabilities.runtime.container_id, capabilities.cap_name)"
+          expression: "!ap.was_capability_used(event.containerId, event.capName)"
     profile_dependency: 0
     severity: 1
     support_policy: false
