--- a/pkg/rules/r1000-exec-from-malicious-source/exec-from-malicious-source.yaml
+++ b/pkg/rules/r1000-exec-from-malicious-source/exec-from-malicious-source.yaml
@@ -12,14 +12,14 @@ spec:
     id: "R1000"
     description: "Detecting exec calls that are from malicious source like: /dev/shm"
     expressions:
-      message: "'Execution from malicious source: ' + exec.exe_path + ' in directory ' + exec.cwd"
-      unique_id: "exec.comm + '_' + exec.exe_path + '_' + exec.pcomm"
+      message: "'Execution from malicious source: ' + event.exepath + ' in directory ' + event.cwd"
+      unique_id: "event.comm + '_' + event.exepath + '_' + event.pcomm"
       rule_expression:
         - event_type: "exec"
           expression: >
-            (exec.exe_path == '/dev/shm' || exec.exe_path.startsWith('/dev/shm/')) ||
-            (exec.cwd == '/dev/shm' || exec.cwd.startsWith('/dev/shm/') || 
-            (parse.get_exec_path(exec.args, exec.comm).startsWith('/dev/shm/')))
+            (event.exepath == '/dev/shm' || event.exepath.startsWith('/dev/shm/')) ||
+            (event.cwd == '/dev/shm' || event.cwd.startsWith('/dev/shm/') || 
+            (parse.get_exec_path(event.args, event.comm).startsWith('/dev/shm/')))
     profile_dependency: 2
     severity: 8
     support_policy: false
