--- a/pkg/rules/r1006-unshare-syscall/unshare-syscall.yaml
+++ b/pkg/rules/r1006-unshare-syscall/unshare-syscall.yaml
@@ -12,11 +12,11 @@ spec:
     id: "R1006"
     description: "Detecting Unshare System Call usage, which can be used to escape container."
     expressions:
-      message: "'Unshare system call detected: ' + syscall.syscall_name + ' with PID ' + string(syscall.pid)"
-      unique_id: "syscall.syscall_name"
+      message: "'Unshare system call detected: ' + event.syscallName + ' with PID ' + string(event.pid)"
+      unique_id: "event.syscallName"
       rule_expression:
         - event_type: "syscall"
-          expression: "syscall.syscall_name == 'unshare' && !ap.was_syscall_used(syscall.runtime.container_id, syscall.syscall_name)"
+          expression: "event.syscallName == 'unshare' && !ap.was_syscall_used(event.containerId, event.syscallName)"
     profile_dependency: 2
     severity: 5
     support_policy: false
