--- a/pkg/rules/r1015-malicious-ptrace-usage/malicious-ptrace-usage.yaml
+++ b/pkg/rules/r1015-malicious-ptrace-usage/malicious-ptrace-usage.yaml
@@ -12,8 +12,8 @@ spec:
     id: "R1015"
     description: "Detecting potentially malicious ptrace usage."
     expressions:
-      message: "'Malicious ptrace usage detected from: ' + ptrace.comm"
-      unique_id: "ptrace.exe_path + '_' + ptrace.comm"
+      message: "'Malicious ptrace usage detected from: ' + event.comm"
+      unique_id: "event.exepath + '_' + event.comm"
       rule_expression:
         - event_type: "ptrace"
           expression: "true"
