--- a/pkg/rules/r0006-unexpected-service-account-token-access/unexpected-service-account-token-access.yaml
+++ b/pkg/rules/r0006-unexpected-service-account-token-access/unexpected-service-account-token-access.yaml
@@ -12,15 +12,15 @@ spec:
     id: "R0006"
     description: "Detecting unexpected access to service account token."
     expressions:
-      message: "'Unexpected access to service account token: ' + event.fullPath + ' with flags: ' + event.flags.join(',')"
+      message: "'Unexpected access to service account token: ' + event.path + ' with flags: ' + event.flags.join(',')"
       unique_id: "event.comm"
       rule_expression:
         - event_type: "open"
           expression: >
-            ((event.fullPath.startsWith('/run/secrets/kubernetes.io/serviceaccount') && event.fullPath.endsWith('/token')) || 
-             (event.fullPath.startsWith('/var/run/secrets/kubernetes.io/serviceaccount') && event.fullPath.endsWith('/token')) ||
-             (event.fullPath.startsWith('/run/secrets/eks.amazonaws.com/serviceaccount') && event.fullPath.endsWith('/token')) ||
-             (event.fullPath.startsWith('/var/run/secrets/eks.amazonaws.com/serviceaccount') && event.fullPath.endsWith('/token'))) &&
+            ((event.path.startsWith('/run/secrets/kubernetes.io/serviceaccount') && event.path.endsWith('/token')) || 
+             (event.path.startsWith('/var/run/secrets/kubernetes.io/serviceaccount') && event.path.endsWith('/token')) ||
+             (event.path.startsWith('/run/secrets/eks.amazonaws.com/serviceaccount') && event.path.endsWith('/token')) ||
+             (event.path.startsWith('/var/run/secrets/eks.amazonaws.com/serviceaccount') && event.path.endsWith('/token'))) &&
             !ap.was_path_opened_with_prefix(event.containerId, '/run/secrets/kubernetes.io/serviceaccount') &&
             !ap.was_path_opened_with_prefix(event.containerId, '/var/run/secrets/kubernetes.io/serviceaccount') &&
             !ap.was_path_opened_with_prefix(event.containerId, '/run/secrets/eks.amazonaws.com/serviceaccount') &&
