--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,9 @@ jobs:
           
     - name: Download dependencies
       run: go mod download
+
+    - name: Fix go
+      run: go env -w GOTOOLCHAIN=go1.25.0+auto
       
     - name: Run tests
       run: go test ./...
