--- a/pkg/rules/r1006-unshare-syscall/unshare-syscall.yaml
+++ b/pkg/rules/r1006-unshare-syscall/unshare-syscall.yaml
@@ -12,11 +12,11 @@ spec:
     id: "R1006"
     description: "Detecting Unshare System Call usage, which can be used to escape container."
     expressions:
-      message: "'Unshare system call detected: ' + event.syscallName + ' with PID ' + string(event.pid)"
-      unique_id: "event.syscallName"
+      message: "'Unshare system call detected: unshare with PID ' + string(event.pid)"
+      unique_id: "'unshare'"
       rule_expression:
         - event_type: "syscall"
-          expression: "event.syscallName == 'unshare' && !ap.was_syscall_used(event.containerId, event.syscallName)"
+          expression: "'unshare' in event.syscalls && !ap.was_syscall_used(event.containerId, 'unshare')"
     profile_dependency: 2
     severity: 5
     support_policy: false
